@@ -629,7 +629,6 @@
                 <plugin>
                     <groupId>com.diffplug.spotless</groupId>
                     <artifactId>spotless-maven-plugin</artifactId>
-                    
                     <version>${spotless.version}</version>
                     <configuration>
                         <java>
@@ -642,6 +641,12 @@
                             </importOrder>
                             <removeUnusedImports/>
                         </java>
+                        <argLine>
+								            --illegal-access=permit
+								            --add-opens=java.base/java.lang=ALL-UNNAMED
+								            --add-opens=java.base/java.util=ALL-UNNAMED
+								            --add-opens=java.base/java.nio=ALL-UNNAMED
+								        </argLine>
                     </configuration>
                     <executions>
                         <execution>
